# dither-qr

./: .gitignore  Cargo.toml  README.md
src/: args.rs  dither_qr.rs  main.rs  qr.rs
