[package]
name = "dither-qr"
description = "A command line tool for generating QR codes with dithered image backgrounds."
version = "0.1.1"
readme = "README.md"
repository = "https://github.com/peterc-s/dither-qr/"
license-file = "LICENSE"
keywords = ["cli", "tool", "qr", "dither"]
categories = ["command-line-utilities"]
exclude = ["/img"]
edition = "2021"


[dependencies]
qrcode = "0.14"
image = "0.24"
ndarray = "0.15"
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
